src/objects/c2g__CompanyOwnership__c.object
<CustomObject>
    <customHelpPage>c2g__companyownershiphelp</customHelpPage>
    <description>Stores information about a company&apos;s ownership structure.</description>
    <fields>
        <fullName>c2g__CompanyName__c</fullName>
        <formula>If(c2g__ExternalCompany__c != null,  c2g__ExternalCompany__c , c2g__InternalCompany__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Company__c</fullName>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Company Ownership</relationshipLabel>
        <relationshipName>CompanyOwnership</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalCompany__c</fullName>
        <label>External Company</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__InternalCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Company Ownership (Internal Company)</relationshipLabel>
        <relationshipName>ParentCompany</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Internal__c</fullName>
        <formula>c2g__InternalCompany__c != null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Internal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__PercentageOwnership__c</fullName>
        <label>Ownership (%)</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Company Ownership</label>
    <nameField>
        <displayFormat>CO-{000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Company Ownerships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>